--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ body {
     background-position: center;
     color: var(--color-fourth);
     padding: 150px 0;
-    background-image: url("images/about_us/background_image.jpg");
+    background-image: url("../images/about_us/background_image.jpg");
     height: 100vh;
 }
 
